# Scavenger_Hunt

./: .clang-uml  .gitignore  CMakeLists.txt  README.md  ScavengerHunt.pro  main.cpp  resources.qrc
core/: Constants.h  Game.cpp  Game.h  GameLoop.cpp  GameLoop.h  GameState.cpp  GameState.h  Level.cpp  Level.h
data/: EntityRegistry.h  ItemData.h  ItemRegistry.h  LevelLoader.cpp  LevelLoader.h  SaveManager.cpp  SaveManager.h
docs/: DATA_LAYER_SPEC.md  ENTITY_LAYER_SPEC.md  SYSTEMS_LAYER_SPEC.md  UI_LAYER_SPEC.md
engine/: AnimatedSprite.cpp  AnimatedSprite.h  Camera.cpp  Camera.h  CollisionEngine.cpp  CollisionEngine.h  InputHandler.cpp  InputHandler.h
entities/: AttackableEntity.cpp  AttackableEntity.h  Cannon.cpp  Cannon.h  Cannonball.cpp  Cannonball.h  CaptainStar.cpp  CaptainStar.h  CollectibleItem.cpp  CollectibleItem.h  Container.cpp  Container.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FierceTooth.cpp  FierceTooth.h  GameObject.cpp  GameObject.h  HiddenArea.cpp  HiddenArea.h  InteractionResult.h  InteractiveObject.cpp  InteractiveObject.h  Player.cpp  Player.h  PuzzleChest.cpp  PuzzleChest.h  QuizNpc.cpp  QuizNpc.h  StaticPlatform.cpp  StaticPlatform.h
systems/: CraftingSystem.cpp  CraftingSystem.h  InventorySystem.cpp  InventorySystem.h  LevelManager.cpp  LevelManager.h  QuestSystem.cpp  QuestSystem.h  ScoreManager.cpp  ScoreManager.h
ui/: CraftingPanel.cpp  CraftingPanel.h  GameOverScreen.cpp  GameOverScreen.h  GameWidget.cpp  GameWidget.h  HUD.cpp  HUD.h  InventoryPanel.cpp  InventoryPanel.h  MainMenuScreen.cpp  MainMenuScreen.h  (+15 more)
(+91 files in other folders)
